Switch to JDK 21, fix some deprecations in JDK 21